# knu-announce-bot-backend

./: .gitignore  pyproject.toml  render.yaml
config/: settings.py  urls.py
infos/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
infos/migrations/: 0001_initial.py  0002_initial.py
links/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
links/migrations/: 0001_initial.py  0002_initial.py  0003_alter_link_link_alter_link_owner.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
