[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Giheon Do <dgh0001@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
numpy = "^1.26.2"
requests = "^2.31.0"
django-cors-headers = "^4.3.1"
discord-webhook = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
